erDiagram

    %% ── Auth / Operator ──────────────────────────────────────────────────────

    tbl_msme_operator {
        UUID   operator_id         PK
        string first_name
        string last_name
        string email               UK
        string password_hash
        string contact_number
        ts     created_at
    }

    %% ── Module 1 — Transaction 1.1 ───────────────────────────────────────────

    tbl_business_profile {
        UUID   business_profile_id PK
        UUID   user_id             FK
        string business_name
        text   business_description
        text   uvp
        text   core_services       "comma-joined list"
        text   image_url
        text   categories          "comma-joined list (V2)"
        float  confidence_score
        float  uniqueness_score
        ts     created_at
        ts     updated_at
    }

    tbl_business_category {
        UUID   category_id          PK
        string category_name        UK
        text   category_description "Lookup / seed table — no FK to profile"
    }

    tbl_classification_logs {
        UUID   log_id               PK
        UUID   business_profile_id  FK
        string inference_status
        float  confidence_score
        ts     execution_time
        text   error_message
    }

    %% ── Relationships ────────────────────────────────────────────────────────

    tbl_msme_operator    ||--o{ tbl_business_profile     : "owns (user_id)"
    tbl_business_profile ||--o{ tbl_classification_logs  : "logs each analyze call"
